Fix: compatibilidade Java 8 e script de build automático
- Reescreve todos os arquivos Java removendo features 14+:
  switch expressions, .toList(), String.isBlank(), String.repeat()
- Atualiza pom.xml: source/target 1.8 e adiciona slf4j-simple
- Adiciona build.bat: baixa Apache Maven 3.9.6 automaticamente se
  não estiver instalado e compila/executa o projeto

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>