@@ -13,35 +13,22 @@ import javax.xml.transform.dom.DOMSource;
 import javax.xml.transform.stream.StreamResult;
 import java.io.File;
 import java.io.StringWriter;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 
 /**
  * Serviço de geração de XML a partir dos campos de entrada.
- *
- * Estrutura do XML gerado:
- * <evento tamanhoTotal="N">
- *   <campos>
- *     <NomeCampo id="1" tipo="TEXTO" tamanho="8" posicaoInicial="1" posicaoFinal="8"
- *                alinhamento="BRANCO_DIREITA" obrigatorio="S"
- *                descricao="...">VALOR_FORMATADO</NomeCampo>
- *     ...
- *   </campos>
- * </evento>
+ * Compatível com Java 8.
  */
 public class XmlService {
 
-    /**
-     * Gera o XML como String.
-     */
     public String gerarXmlString(List<CampoEntrada> campos) throws Exception {
         Document doc = construirDocumento(campos);
         return documentoParaString(doc);
     }
 
-    /**
-     * Gera o XML e salva em arquivo.
-     */
     public void salvarXml(List<CampoEntrada> campos, File arquivo) throws Exception {
         Document doc = construirDocumento(campos);
         salvarDocumento(doc, arquivo);
@@ -52,30 +39,24 @@ public class XmlService {
         DocumentBuilder builder = factory.newDocumentBuilder();
         Document doc = builder.newDocument();
 
-        // Filtra e ordena campos de entrada
-        List<CampoEntrada> camposEntrada = campos.stream()
-                .filter(CampoEntrada::isEntradaComPosicao)
-                .sorted(Comparator.comparing(CampoEntrada::getPosicaoInicial))
-                .toList();
+        List<CampoEntrada> camposEntrada = filtrarEOrdenar(campos);
 
-        // Elemento raiz
         Element root = doc.createElement("evento");
         doc.appendChild(root);
 
-        int totalSize = camposEntrada.stream()
-                .mapToInt(c -> c.getTamanhoCampo() != null ? c.getTamanhoCampo() : 0)
-                .sum();
+        int totalSize = 0;
+        for (CampoEntrada c : camposEntrada) {
+            totalSize += (c.getTamanhoCampo() != null ? c.getTamanhoCampo() : 0);
+        }
         root.setAttribute("tamanhoTotal", String.valueOf(totalSize));
         root.setAttribute("totalCampos", String.valueOf(camposEntrada.size()));
 
-        // Container de campos
         Element camposEl = doc.createElement("campos");
         root.appendChild(camposEl);
 
         for (CampoEntrada campo : camposEntrada) {
             Element campoEl = doc.createElement(sanitizarNomeXml(campo.getNomeCampo()));
 
-            // Atributos posicionais e descritivos
             if (campo.getIdentificadorCampo() != null) {
                 campoEl.setAttribute("id", String.valueOf(campo.getIdentificadorCampo()));
             }
@@ -86,38 +67,38 @@ public class XmlService {
             if (campo.getPosicaoInicial() != null) {
                 campoEl.setAttribute("posicaoInicial", String.valueOf(campo.getPosicaoInicial()));
             }
-            if (campo.getPosicaoFinal() != null) {
-                campoEl.setAttribute("posicaoFinal", String.valueOf(campo.getPosicaoFinal()));
-            } else if (campo.getPosicaoInicial() != null && campo.getTamanhoCampo() != null) {
-                campoEl.setAttribute("posicaoFinal",
-                        String.valueOf(campo.getPosicaoInicial() + campo.getTamanhoCampo() - 1));
-            }
-            if (!campo.getAlinhamentoCampo().isBlank()) {
+            int posFinal = campo.getPosicaoFinal() != null
+                    ? campo.getPosicaoFinal()
+                    : campo.calcularPosicaoFinalEsperada();
+            campoEl.setAttribute("posicaoFinal", String.valueOf(posFinal));
+
+            if (!campo.getAlinhamentoCampo().trim().isEmpty()) {
                 campoEl.setAttribute("alinhamento", campo.getAlinhamentoCampo());
             }
-            if (!campo.getCampoObrigatorio().isBlank()) {
+            if (!campo.getCampoObrigatorio().trim().isEmpty()) {
                 campoEl.setAttribute("obrigatorio", campo.getCampoObrigatorio());
             }
-            if (!campo.getDescricaoCampo().isBlank()) {
+            if (!campo.getDescricaoCampo().trim().isEmpty()) {
                 campoEl.setAttribute("descricao", campo.getDescricaoCampo());
             }
-            if (!campo.getNomeColuna().isBlank()) {
+            if (!campo.getNomeColuna().trim().isEmpty()) {
                 campoEl.setAttribute("colunaDB", campo.getNomeColuna());
             }
 
-            // Valor do campo: usa valorUsuario, senão valorPadrao, senão vazio
             String valor = campo.getValorUsuario();
-            if (valor == null || valor.isBlank()) {
+            if (valor == null || valor.trim().isEmpty()) {
                 valor = campo.getValorPadrao();
-                if (valor == null || valor.isBlank()) {
+                if (valor == null || valor.trim().isEmpty()) {
                     valor = campo.getDefaultValue();
                 }
             }
 
-            // Aplica alinhamento/padding conforme configuração do campo
             if (campo.getTamanhoCampo() != null) {
-                valor = aplicarAlinhamento(valor != null ? valor : "", campo.getTamanhoCampo(),
-                        campo.getAlinhamentoCampo(), campo.getTipoCampo());
+                valor = aplicarAlinhamento(
+                        valor != null ? valor : "",
+                        campo.getTamanhoCampo(),
+                        campo.getAlinhamentoCampo(),
+                        campo.getTipoCampo());
             }
 
             campoEl.setTextContent(valor != null ? valor : "");
@@ -128,17 +109,10 @@ public class XmlService {
     }
 
     /**
-     * Aplica o alinhamento/padding conforme a regra da planilha.
-     *
-     * BRANCO_DIREITA  → valor alinhado à direita com espaços à esquerda
-     * BRANCO_ESQUERDA → valor alinhado à esquerda com espaços à direita
-     * ZERO_ESQUERDA   → valor alinhado à direita com zeros à esquerda
-     * ZERO_DIREITA    → valor alinhado à esquerda com zeros à direita
+     * Aplica padding/alinhamento conforme a regra da planilha.
      */
     public String aplicarAlinhamento(String valor, int tamanho, String alinhamento, String tipoCampo) {
         if (valor == null) valor = "";
-
-        // Trunca se exceder
         if (valor.length() > tamanho) {
             return valor.substring(0, tamanho);
         }
@@ -146,40 +120,53 @@ public class XmlService {
         int diff = tamanho - valor.length();
         if (diff == 0) return valor;
 
-        String padChar;
-        boolean padEsquerda;
-
         String alin = alinhamento != null ? alinhamento.toUpperCase().trim() : "";
 
-        // Se não houver alinhamento definido, usa padrão por tipo
-        if (alin.isBlank()) {
+        if (alin.isEmpty()) {
             boolean numerico = tipoCampo != null &&
-                    (tipoCampo.contains("INTEIRO") || tipoCampo.contains("DECIMAL") || tipoCampo.contains("NUMERO"));
+                    (tipoCampo.contains("INTEIRO") || tipoCampo.contains("DECIMAL"));
             alin = numerico ? "ZERO_ESQUERDA" : "BRANCO_ESQUERDA";
         }
 
-        return switch (alin) {
-            case "BRANCO_DIREITA" -> " ".repeat(diff) + valor;
-            case "BRANCO_ESQUERDA" -> valor + " ".repeat(diff);
-            case "ZERO_ESQUERDA" -> "0".repeat(diff) + valor;
-            case "ZERO_DIREITA" -> valor + "0".repeat(diff);
-            default -> valor + " ".repeat(diff);
-        };
+        switch (alin) {
+            case "BRANCO_DIREITA":  return repeatChar(' ', diff) + valor;
+            case "BRANCO_ESQUERDA": return valor + repeatChar(' ', diff);
+            case "ZERO_ESQUERDA":   return repeatChar('0', diff) + valor;
+            case "ZERO_DIREITA":    return valor + repeatChar('0', diff);
+            default:                return valor + repeatChar(' ', diff);
+        }
     }
 
-    /**
-     * Sanitiza o nome do campo para ser um nome XML válido.
-     * Remove caracteres inválidos e garante que começa com letra ou underscore.
-     */
+    private String repeatChar(char c, int times) {
+        if (times <= 0) return "";
+        char[] chars = new char[times];
+        java.util.Arrays.fill(chars, c);
+        return new String(chars);
+    }
+
     private String sanitizarNomeXml(String nome) {
-        if (nome == null || nome.isBlank()) return "campo";
+        if (nome == null || nome.trim().isEmpty()) return "campo";
+        String s = nome.trim().replaceAll("[^a-zA-Z0-9_\\-.]", "_");
+        if (!s.isEmpty() && !Character.isLetter(s.charAt(0)) && s.charAt(0) != '_') {
+            s = "_" + s;
+        }
+        return s.isEmpty() ? "campo" : s;
+    }
 
-        // Substitui caracteres inválidos por underscore
-        String sanitizado = nome.trim()
-                .replaceAll("[^a-zA-Z0-9_\\-.]", "_")
-                .replaceAll("^[^a-zA-Z_]", "_$0");
-
-        return sanitizado.isBlank() ? "campo" : sanitizado;
+    private List<CampoEntrada> filtrarEOrdenar(List<CampoEntrada> campos) {
+        List<CampoEntrada> resultado = new ArrayList<>();
+        for (CampoEntrada c : campos) {
+            if (c.isEntradaComPosicao()) {
+                resultado.add(c);
+            }
+        }
+        Collections.sort(resultado, new Comparator<CampoEntrada>() {
+            @Override
+            public int compare(CampoEntrada a, CampoEntrada b) {
+                return Integer.compare(a.getPosicaoInicial(), b.getPosicaoInicial());
+            }
+        });
+        return resultado;
     }
 
     private String documentoParaString(Document doc) throws Exception {
